[workspace.package]
version = "0.1.0"
description = "Praesepe, a collection of commonly used development tools."
homepage = "https://github.com/starryflow/praesepe"
repository = "https://github.com/starryflow/praesepe"
authors = ["Starryflow <opensource@starryflow.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"
readme = "README.md"

[workspace]
members = ["server", "tso", "var"]
resolver = "2"

[workspace.dependencies]
# 
anyhow = "1.0.90"
fail = "0.5.1"
scopeguard = "1.2.0"
thiserror = "1.0.64"

# algo
byteorder = "1.5.0"
# digest = "0.10.7"
getrandom = "0.2.15"
sha2 = "0.10.8"

# async runtime
async-trait = "0.1.83"
tokio = { version = "1.41.0", features = ["full"] }

# container
flurry = "0.5.1"
im = "15.1.0"
indexmap = { version = "2.3.0", features = ["serde"] }

# database
etcd-client = "0.14.0"
sqlx = { version = "0.8.2", features = ["mysql", "sqlite", "runtime-tokio"] }

# multi-thread
crossbeam = "0.8.4"
parking_lot = "0.12.3"
# rayon = "1.10.0"
# threadpool = "1.8.1"

# numeric
numtoa = "0.2.4"
ryu = "1.0"

# observability
env_logger = "0.11.5"
fastrace = { version = "0.7", features = ["enable"] }
log = "0.4.22"
prometheus = "0.13.4"

# string
faststr = { version = "0.2.23", features = ["serde"] }

# serde
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

# time
chrono = "0.4.38"
coarsetime = "0.1.34"

[profile.release]
debug = 1               # line tables only
opt-level = 3           # all optimizations
lto = 'thin'            # link time optimizations
overflow-checks = false # Disable integer overflow checks.
codegen-units = 1       # Reduce number of codegen units to increase optimizations.
incremental = true
panic = "abort"
strip = true

[profile.dev]
# see https://doc.rust-lang.org/cargo/reference/profiles.html
incremental = true
