[package]
name = "server"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
tso = { path = "../tso" }

# async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# observability
env_logger = { workspace = true }
log = { workspace = true }

# time
chrono = { workspace = true }
