[package]
name = "tso"
description = "TimestampOracle, time-based distributed system ID."
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
# 
anyhow = { workspace = true }
scopeguard = { workspace = true }
thiserror = { workspace = true }

# algo
byteorder = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }

# async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# container
flurry = { workspace = true }

# database
etcd-client = { workspace = true }
sqlx = { workspace = true }

# multi-thread
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# observability
env_logger = { workspace = true }
fastrace = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# time
chrono = { workspace = true }
coarsetime = { workspace = true }
